@startuml ClassDiagram
/'
To run this diagram, you can use the following URL:
http://www.plantuml.com/plantuml/uml/

In VS Code, you can use the PlantUML extension to preview the diagram.
https://marketplace.visualstudio.com/items?itemName=jebbs.plantuml
Be sure to set your settings to use the plantuml server to render and add the main uml server link

class diagram guidelines:
https://plantuml.com/class-diagram
'/


/'
Token class

This class represents a fungible token.
It is based off the ERC-1155 specification.
https://ethereum.org/en/developers/docs/standards/tokens/erc-1155/
https://docs.openzeppelin.com/contracts/3.x/erc1155
'/
class Token {
    - property_id: uuid
    - token_amount: integer
    - transfer_tokens(): void
    - burn_tokens(): void
    - mint_fungible_tokens(): void
    - get_token_balance(): void
    - get_token_supply(): void
    - get_token_owner(): void
    - get_token_transactions(): void
    - get_token_holders(): void
    - get_token_issuers(): void
}

class MetaMaskWallet {
 + name: string
 - wallet_address: string
 - transaction_history: List<Transaction>
 - token_amt: integer
 - activity_log: List<activity>
 + add_transaction(Transaction): void
 + add_token(token): void
 + update_account_preferences(): void
 + get_balance(token_amt): double
}


class User {
    + name: string
    + email: string
    - password: string
    + has: Token
    - has: MetaMaskWallet
}

Token "many" --o "1" User: has >
MetaMaskWallet "1" --o  "1" User: connects >
Token "many" --o "1" MetaMaskWallet: connects >
@enduml